# diamond-dojo

./: .clang-format  .clang-tidy  .gitmodules  BUILD.bazel  WORKSPACE.bazel  system.BUILD.bazel  unbox-bazel.config.js
.rh-project/: bootstrap.sh  build-all.sh  build-boost.sh  build-diamond.sh  clean-all.sh  conf.sh  generate-compdb.sh  run-diamond.sh
