# Hey Emacs, this is -*- coding: utf-8; mode: bazel -*-

workspace(name = "diamond-dojo")

local_repository(
  name = "rules_compdb",
  path = "external/bazelbuild-rules-compdb",
)

new_local_repository(
  name = "system",
  path = "/usr/lib/x86_64-linux-gnu",
  build_file = "system.BUILD.bazel",
)
