# Hey Emacs, this is -*- coding: utf-8; mode: bazel -*-

workspace(name = "diamond-dojo")

local_repository(
  name = "rules_compdb",
  path = "external/bazelbuild-rules-compdb",
)

local_repository(
  name = "range-v3",
  path = "external/range-v3",
)

new_local_repository(
  name = "system",
  path = "/usr/lib/x86_64-linux-gnu",
  build_file = "system.BUILD.bazel",
)
